--- a/index.html
+++ b/index.html
@@ -25,6 +25,19 @@
     </style>
   </head>
   <body>
+    <header>
+      <nav class="flex">
+        <a href="/" class="logo">
+          <img src="./images/logo.svg" alt="Easybank" />
+        </a>
+
+        <a href="#" class="hamburger">
+          <span></span><span></span><span></span>
+        </a>
+      </nav>
+    </header>
+
+    <!--     
     Home About Contact Blog Careers Request Invite Next generation digital
     banking Take your financial life online. Your Easybank account will be a
     one-stop-shop for spending, saving, budgeting, investing, and much more.
@@ -48,14 +61,14 @@
     Robinson Our invite-only Beta accounts are now live! After a lot of hard
     work by the whole team, we’re excited to launch our closed beta. It’s easy
     to request an invite through the site ... About Us Contact Blog Careers
-    Support Privacy Policy Request Invite © Easybank. All Rights Reserved
+    Support Privacy Policy Request Invite © Easybank. All Rights Reserved -->
 
-    <div class="attribution">
+    <!-- <div class="attribution">
       Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
         >Frontend Mentor</a
       >. Coded by <a href="#">Tiago Ramos</a>.
-    </div>
+    </div> -->
 
     <script src="./app/js/script.js"></script>
   </body>
