--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
           <a href="#">Blog</a>
           <a href="#">Careers</a>
         </div>
+
+        <a href="#" class="button header__cta">Request Invite</a>
       </nav>
     </header>
 
