--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <header class="header">
       <div class="overlay"></div>
 
-      <nav class="flex flex-jc-sb flex-ai-c">
+      <nav class="container flex flex-jc-sb flex-ai-c">
         <a href="/" class="header__logo">
           <img src="./images/logo.svg" alt="Easybank" />
         </a>
 
-        <a id="btnHamburger" href="#" class="header__menu hide-for-desktop">
+        <a id="btnHamburger" href="#" class="header__toggle hide-for-desktop">
           <span></span>
           <span></span>
           <span></span>
@@ -47,10 +47,18 @@
           <a href="#">Careers</a>
         </div>
 
-        <a href="#" class="button header__cta hide-for-mobile"
-          >Request Invite</a
-        >
+        <a href="#" class="button header__cta hide-for-mobile">
+          Request Invite
+        </a>
       </nav>
+
+      <div class="header__menu">
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Contact</a>
+        <a href="#">Blog</a>
+        <a href="#">Careers</a>
+      </div>
     </header>
 
     Request Invite Next generation digital banking Take your financial life
