--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </head>
   <body>
     <header class="header">
-      <div class="overlay"></div>
+      <div class="overlay has-fade"></div>
 
       <nav class="container flex flex-jc-sb flex-ai-c">
         <a href="/" class="header__logo">
@@ -52,7 +52,7 @@
         </a>
       </nav>
 
-      <div class="header__menu">
+      <div class="header__menu has-fade">
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
