--- a/index.html
+++ b/index.html
@@ -1,159 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link
-      rel="icon"
-      type="image/png"
-      sizes="32x32"
-      href="./images/favicon-32x32.png"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <link rel="stylesheet" href="./app/scss/style.css" />
-    <title>Frontend Mentor | Easybank landing page</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png" />
 
-    <style>
-      .attribution {
-        font-size: 11px;
-        text-align: center;
-      }
-      .attribution a {
-        color: hsl(228, 45%, 44%);
-      }
-    </style>
-  </head>
-  <body>
-    <header class="header">
-      <div class="overlay has-fade"></div>
+  <link rel="stylesheet" href="./app/scss/style.css" />
+  <title>Frontend Mentor | Easybank landing page</title>
 
-      <nav class="container container--pall flex flex-jc-sb flex-ai-c">
-        <a href="/" class="header__logo">
-          <img src="./images/logo.svg" alt="Easybank" />
-        </a>
+  <style>
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
 
-        <a id="btnHamburger" href="#" class="header__toggle hide-for-desktop">
-          <span></span>
-          <span></span>
-          <span></span>
-        </a>
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
+  </style>
+</head>
 
-        <div class="header__links hide-for-mobile">
-          <a href="#">Home</a>
-          <a href="#">About</a>
-          <a href="#">Contact</a>
-          <a href="#">Blog</a>
-          <a href="#">Careers</a>
-        </div>
+<body>
+  <header class="header">
+    <div class="overlay has-fade"></div>
 
-        <a href="#" class="button header__cta hide-for-mobile">
-          Request Invite
-        </a>
-      </nav>
+    <nav class="container container--pall flex flex-jc-sb flex-ai-c">
+      <a href="/" class="header__logo">
+        <img src="./images/logo.svg" alt="Easybank" />
+      </a>
 
-      <div class="header__menu has-fade">
+      <a id="btnHamburger" href="#" class="header__toggle hide-for-desktop">
+        <span></span>
+        <span></span>
+        <span></span>
+      </a>
+
+      <div class="header__links hide-for-mobile">
         <a href="#">Home</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
         <a href="#">Blog</a>
         <a href="#">Careers</a>
       </div>
-    </header>
 
-    <section class="hero container">
-      <div class="container">
-        <div class="hero__image"></div>
+      <a href="#" class="button header__cta hide-for-mobile">
+        Request Invite
+      </a>
+    </nav>
 
-        <div class="hero__text container--pall">
-          <h1>Next generation digital banking</h1>
-          <p>
-            Take your financial life online. Your Easybank account will be a
-            one-stop-shop for spending, saving, budgeting, investing, and much
-            more.
-          </p>
-          <a href="#" class="button hero__cta">Request Invite</a>
-        </div>
-      </div>
-    </section>
-
-    <section class="feature">
-      <div class="feature__content container container--pall">
-        <div class="feature__intro">
-          <h2>Why choose Easybank?</h2>
-          <p>
-            We leverage Open Banking to turn your bank account into your
-            financial hub. Control your finances like never before.
-          </p>
-        </div>
-
-        <div class="feature__grid">
-          <div class="feature__item">
-            <div class="feature__icon">
-              <img src="/images/icon-online.svg" alt="" />
-            </div>
-            <div class="feature__title">Online Banking</div>
-            <div class="feature__description">
-              Our modern web and mobile applications allow you to keep track of
-              your finances wherever you are in the world.
-            </div>
-          </div>
-
-          <div class="feature__item">
-            <div class="feature__icon">
-              <img src="/images/icon-budgeting.svg" alt="" />
-            </div>
-            <div class="feature__title">Simple Budgeting</div>
-            <div class="feature__description">
-              See exactly where your money goes each month. Receive
-              notifications when you’re close to hitting your limits.
-            </div>
-          </div>
-
-          <div class="feature__item">
-            <div class="feature__icon">
-              <img src="/images/icon-onboarding.svg" alt="" />
-            </div>
-            <div class="feature__title">Fast Onboarding</div>
-            <div class="feature__description">
-              We don’t do branches. Open your account in minutes online and
-              start taking control of your finances right away.
-            </div>
-          </div>
-
-          <div class="feature__item">
-            <div class="feature__icon">
-              <img src="/images/icon-api.svg" alt="" />
-            </div>
-            <div class="feature__title">Open API</div>
-            <div class="feature__description">
-              Manage your savings, investments, pension, and much more from one
-              account. Tracking your money has never been easier.
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    Latest Articles By Claire Robinson Receive money in any currency with no
-    fees The world is getting smaller and we’re becoming more mobile. So why
-    should you be forced to only receive money in a single … By Wilson Hutton
-    Treat yourself without worrying about money Our simple budgeting feature
-    allows you to separate out your spending and set realistic limits each
-    month. That means you … By Wilson Hutton Take your Easybank card wherever
-    you go We want you to enjoy your travels. This is why we don’t charge any
-    fees on purchases while you’re abroad. We’ll even show you … By Claire
-    Robinson Our invite-only Beta accounts are now live! After a lot of hard
-    work by the whole team, we’re excited to launch our closed beta. It’s easy
-    to request an invite through the site ...
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Tiago Ramos</a>.
+    <div class="header__menu has-fade">
+      <a href="#">Home</a>
+      <a href="#">About</a>
+      <a href="#">Contact</a>
+      <a href="#">Blog</a>
+      <a href="#">Careers</a>
     </div>
+  </header>
 
-    <script src="./app/js/script.js"></script>
-  </body>
+  <section class="hero container">
+    <div class="container">
+      <div class="hero__image"></div>
+
+      <div class="hero__text container--pall">
+        <h1>Next generation digital banking</h1>
+        <p>
+          Take your financial life online. Your Easybank account will be a
+          one-stop-shop for spending, saving, budgeting, investing, and much
+          more.
+        </p>
+        <a href="#" class="button hero__cta">Request Invite</a>
+      </div>
+    </div>
+  </section>
+
+  <section class="feature">
+    <div class="feature__content container container--pall">
+      <div class="feature__intro">
+        <h2>Why choose Easybank?</h2>
+        <p>
+          We leverage Open Banking to turn your bank account into your
+          financial hub. Control your finances like never before.
+        </p>
+      </div>
+
+      <div class="feature__grid">
+        <div class="feature__item">
+          <div class="feature__icon">
+            <img src="/images/icon-online.svg" alt="" />
+          </div>
+          <div class="feature__title">Online Banking</div>
+          <div class="feature__description">
+            Our modern web and mobile applications allow you to keep track of
+            your finances wherever you are in the world.
+          </div>
+        </div>
+
+        <div class="feature__item">
+          <div class="feature__icon">
+            <img src="/images/icon-budgeting.svg" alt="" />
+          </div>
+          <div class="feature__title">Simple Budgeting</div>
+          <div class="feature__description">
+            See exactly where your money goes each month. Receive
+            notifications when you’re close to hitting your limits.
+          </div>
+        </div>
+
+        <div class="feature__item">
+          <div class="feature__icon">
+            <img src="/images/icon-onboarding.svg" alt="" />
+          </div>
+          <div class="feature__title">Fast Onboarding</div>
+          <div class="feature__description">
+            We don’t do branches. Open your account in minutes online and
+            start taking control of your finances right away.
+          </div>
+        </div>
+
+        <div class="feature__item">
+          <div class="feature__icon">
+            <img src="/images/icon-api.svg" alt="" />
+          </div>
+          <div class="feature__title">Open API</div>
+          <div class="feature__description">
+            Manage your savings, investments, pension, and much more from one
+            account. Tracking your money has never been easier.
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="articles">
+    <div class="article__content container container--pall">
+      <h2>Latest Articles</h2>
+
+      <div class="article__grid">
+
+        <a href="#" class="article__item">
+          <div class="article__image" style="background-image: url('/images/image-currency.jpg')"></div>
+          <div class="article__text">
+            <div class="article__author">By Claire Robinson</div>
+            <div class="article__title">
+              Receive money in any currency with no fees
+            </div>
+            <div class="article_description">
+              The world is getting smaller and we’re becoming more mobile. So
+              why should you be forced to only receive money in a single …
+            </div>
+          </div>
+        </a>
+
+      </div>
+    </div>
+  </section>
+
+  By Wilson Hutton Treat yourself without worrying about money Our simple
+  budgeting feature allows you to separate out your spending and set realistic
+  limits each month. That means you … By Wilson Hutton Take your Easybank card
+  wherever you go We want you to enjoy your travels. This is why we don’t
+  charge any fees on purchases while you’re abroad. We’ll even show you … By
+  Claire Robinson Our invite-only Beta accounts are now live! After a lot of
+  hard work by the whole team, we’re excited to launch our closed beta. It’s
+  easy to request an invite through the site ...
+
+  <div class="attribution">
+    Challenge by
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a
+      href="#">Tiago Ramos</a>.
+  </div>
+
+  <script src="./app/js/script.js"></script>
+</body>
+
 </html>
