--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-currency.jpg')"
+              style="background-image: url('/images/image-restaurant.jpg')"
             ></div>
             <div class="article__text">
               <div class="article__author">By Claire Robinson</div>
@@ -179,7 +179,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-currency.jpg')"
+              style="background-image: url('/images/image-plane.jpg')"
             ></div>
             <div class="article__text">
               <div class="article__author">By Wilson Hutton</div>
@@ -196,7 +196,7 @@
           <a href="#" class="article__item">
             <div
               class="article__image"
-              style="background-image: url('/images/image-currency.jpg')"
+              style="background-image: url('/images/image-confetti.jpg')"
             ></div>
             <div class="article__text">
               <div class="article__author">By Claire Robinson</div>
