--- a/index.html
+++ b/index.html
@@ -251,10 +251,9 @@
 
       <div class="footer__cta">
         <a href="#" class="button">Request Invite</a>
-        <div class="footer__copyright">
-          &copy; EasyBank. All Rights Reserved.
-        </div>
       </div>
+
+      <div class="footer__copyright">&copy; EasyBank. All Rights Reserved.</div>
     </footer>
 
     <div class="attribution">
